Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40957

Android apps crash if quiting while keyboard is open

XMLWordPrintable

    • Android
    • 4c6ebe5f9e4ddc0d799a0f2bf4aef9f7e48e0dfb 5a278dd42a9fa6a27dca3a6ec1f8ada3c433a780

      Run attached test-case.
      It will open a keyboard on startup.
      Clicking the red rectangle will trigger a QGuiApplicatio::quit()

      Thread 2 (Thread 5189.5224):
      #0 0x55290a24 in QListData::size (this=0x42) at ../../include/QtCore/../../src/corelib/tools/qlist.h:96

      #1 0x5554fd60 in QList<QPointer<QObject> >::size (this=0x42) at ../../include/QtCore/../../src/corelib/tools/qlist.h:137

      #2 0x5554b440 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x5289dca0, receiver=0x52957e18, event=0x587794f8) at kernel/qcoreapplication.cpp:1023
      i = 0
      q = 0x56ea38f8
      _PRETTY_FUNCTION_ = "bool QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*)"
      #3 0x5554b4d0 in QCoreApplicationPrivate::notify_helper (this=0x5289dca0, receiver=0x52957e18, event=0x587794f8) at kernel/qcoreapplication.cpp:1049
      No locals.
      #4 0x5554b0e0 in QCoreApplication::notify (this=0x56ea38f8, receiver=0x52957e18, event=0x587794f8) at kernel/qcoreapplication.cpp:997
      d = 0x5289dca0
      _PRETTY_FUNCTION_ = "virtual bool QCoreApplication::notify(QObject*, QEvent*)"
      #5 0x5554afd0 in QCoreApplication::notifyInternal (this=0x56ea38f8, receiver=0x52957e18, event=0x587794f8) at kernel/qcoreapplication.cpp:935
      threadData = 0x52af9c88
      loopLevelCounter =

      {threadData = 0x52af9c88}

      result = false
      cbdata =

      {0x52957e18, 0x587794f8, 0x56ea3477}

      d = 0x54a1d328
      #6 0x56956e80 in QCoreApplication::sendEvent (receiver=0x52957e18, event=0x587794f8) at ../../../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
      No locals.
      #7 0x569590a0 in QAndroidInputContext::sendEvent (this=0x5289cdd4, receiver=0x52957e18, event=0x587794f8) at qandroidinputcontext.cpp:590
      No locals.
      #8 0x5696c4c4 in QAndroidInputContext::qt_static_metacall (_o=0x5289cdd4, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbea7cff4) at .moc/moc_qandroidinputcontext.cpp:92
      _t = 0x5289cdd4
      #9 0x55595ab0 in QMetaCallEvent::placeMetaCall (this=0x58698cc8, object=0x5289cdd4) at kernel/qobject.cpp:487
      No locals.
      #10 0x55596d94 in QObject::event (this=0x5289cdd4, e=0x58698cc8) at kernel/qobject.cpp:1241
      mce = 0x58698cc8
      sw = {receiver = 0x5289cdd4, previousSender = 0x0, currentSender =

      {sender = 0x0, signal = -1, ref = 1}

      , switched = true}
      #11 0x5554b500 in QCoreApplicationPrivate::notify_helper (this=0x5289dca0, receiver=0x5289cdd4, event=0x58698cc8) at kernel/qcoreapplication.cpp:1052
      No locals.
      #12 0x5554b0e0 in QCoreApplication::notify (this=0x56ea38f8, receiver=0x5289cdd4, event=0x58698cc8) at kernel/qcoreapplication.cpp:997
      d = 0x5289dca0
      _PRETTY_FUNCTION_ = "virtual bool QCoreApplication::notify(QObject*, QEvent*)"
      #13 0x5554afd0 in QCoreApplication::notifyInternal (this=0x56ea38f8, receiver=0x5289cdd4, event=0x58698cc8) at kernel/qcoreapplication.cpp:935
      threadData = 0x5289dd38
      loopLevelCounter =

      {threadData = 0x5289dd38}

      result = false
      cbdata =

      {0x5289cdd4, 0x58698cc8, 0x56ea366f}

      d = 0x5289cf70
      #14 0x555485d8 in QCoreApplication::sendEvent (receiver=0x5289cdd4, event=0x58698cc8) at kernel/qcoreapplication.h:237
      No locals.
      #15 0x5554c768 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5289dd38) at kernel/qcoreapplication.cpp:1539
      e = 0x58698cc8
      pe = @0x54b897b8
      r = 0x5289cdd4
      unlocker =

      {m = @0x56ea36c0}

      event_deleter =

      {d = 0x58698cc8}

      _PRETTY_FUNCTION_ = "static void QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*)"
      locker =

      {val = 1384766804}

      startOffset = 0
      i = @0x5289dd4c
      cleanup =

      {receiver = 0x0, event_type = 0, data = 0x5289dd38, exceptionCaught = true}

      #16 0x555d9018 in QEventDispatcherUNIX::processEvents (this=0x529557c0, flags=...) at kernel/qeventdispatcher_unix.cpp:587
      d = 0x401c43d8
      nevents = 1458190404
      canWait = 86
      #17 0x56a05e18 in QUnixEventDispatcherQPA::processEvents (this=0x529557c0, flags=...) at eventdispatchers/qunixeventdispatcher.cpp:70
      didSendEvents = 82
      #18 0x55546cb0 in QEventLoop::processEvents (this=0x56ea3840, flags=...) at kernel/qeventloop.cpp:136
      d = 0x52af9648
      #19 0x55d4fe40 in QQmlDebugServerPrivate::cleanup (this=0x52afa318) at debugger/qqmldebugserver.cpp:235
      q = 0x55ee8464
      loop = {<QObject> = {_vptr.QObject = 0x5586bfc0, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x557232ac, data = 0x55723384, static_metacall = 0x555a0bd4 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr =

      {d = 0x52af9648}

      , static staticQtMetaObject = {d =

      {superdata = 0x0, stringdata = 0x557da140, data = 0x557e1e6c, static_metacall = 0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x5586a398, stringdata = 0x557ec958, data = 0x557ec99c, static_metacall = 0x5565a2ec <QEventLoop::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
      #20 0x55d4f4b0 in QQmlDebugServerInstanceWrapper::cleanup (this=0x55ee8464) at debugger/qqmldebugserver.cpp:156
      No locals.
      #21 0x55d50a58 in cleanup () at debugger/qqmldebugserver.cpp:354
      wrapper = 0x55ee8464
      #22 0x555494fc in qt_call_post_routines () at kernel/qcoreapplication.cpp:296
      list = 0x5586e064
      #23 0x5554abcc in QCoreApplication::~QCoreApplication (this=0x56ea38f8, __in_chrg=<optimized out>) at kernel/qcoreapplication.cpp:779
      globalThreadPool = 0x52955998
      #24 0x55faa0c0 in QGuiApplication::~QGuiApplication (this=0x56ea38f8, __in_chrg=<optimized out>) at kernel/qguiapplication.cpp:602
      No locals.
      #25 0x52e3d7d4 in main (argc=1, argv=0x56ea3998) at /data/extra/sources/flow-pomodoro/src/main.cpp:134
      app = {<QCoreApplication> = {<QObject> = {_vptr.QObject = 0x5586c020, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x557232ac, data = 0x55723384, static_metacall = 0x555a0bd4 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x5289dca0}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x557da140, data = 0x557e1e6c, static_metacall = 0, relatedMetaObjects = 0x0, extradata = 0x0}

      }}, static staticMetaObject = {d = {superdata = 0x5586a398, stringdata = 0x557eca54, data = 0x557ecc04, static_metacall = 0x5565a500 <QCoreApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, static self = 0x56ea38f8}, static staticMetaObject = {d =

      {superdata = 0x5586c000, stringdata = 0x563cb5e0, data = 0x563cb928, static_metacall = 0x55fb4cbc <QGuiApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}

      }}
      translator = {<QObject> = {_vptr.QObject = 0x5586a3f0, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x557232ac, data = 0x55723384, static_metacall = 0x555a0bd4 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr =

      {d = 0x52956600}

      , static staticQtMetaObject = {d =

      {superdata = 0x0, stringdata = 0x557da140, data = 0x557e1e6c, static_metacall = 0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = {superdata = 0x5586a398, stringdata = 0x557eebe0, data = 0x557eebfc, static_metacall = 0x5565b8d0 <QTranslator::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
      window = {<QQuickView> = {<QQuickWindow> = {<QWindow> = {<QObject> = {_vptr.QObject = 0x5586a3f0, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x557232ac, data = 0x55723384, static_metacall = 0x555a0bd4 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x529569c8}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x557da140, data = 0x557e1e6c, static_metacall = 0, relatedMetaObjects = 0x0, extradata = 0x0}

      }}, <QSurface> = {_vptr.QSurface = 0x56482960, m_type = QSurface::Window, m_reserved = 0x0}, static staticMetaObject = {d =

      {superdata = 0x5586a398, stringdata = 0x563cc408, data = 0x563cccb0, static_metacall = 0x55fc12d8 <QWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}

      }}, static staticMetaObject = {d =

      {superdata = 0x564827e0, stringdata = 0x56874868, data = 0x56874d3c, static_metacall = 0x56672d80 <QQuickWindow::qt_ static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}

      }}, static staticMetaObject = {d =

      {superdata = 0x56919420, stringdata = 0x568b22e4, data = 0x568b2528, static_metacall = 0x56836f98 <QQuickView::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}

      }}, static staticMetaObject = {d = {superdata = 0x569228b8, stringdata = 0x52e63ae0, data = 0x52e63b30, static_metacall = 0x52e41c40 <QuickView::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, m_storage = 0x52af6850, m_controller = 0x52b4bdc0, m_pluginModel = 0x52b01ed0, m_developerMode = false}
      _PRETTY_FUNCTION_ = "\376}\347P\246\254\v%;\311\316Cb\361\334\357\244\310rm", <incomplete sequence \373>
      #26 0x56941040 in startMainMethod () at androidjnimain.cpp:444
      params = {a = 256, s = 2, ptr = 0x56ea3998, {array = "@\327\211R", '\000' <repeats 973 times>, "ЏR]M\023@\000\000\000\000\000\000\000\000\003\000\000\000@ĉR\000\000\000\000\030\017\224V\000\000\000\000\304\361\022@\000\000\000\000\000\000\000", q_for_alignment_1 = 1384765248, q_for_alignment_2 = 6.8416493659163394e-315}}
      ret = 0
      _PRETTY_FUNCTION_ = "void* startMainMethod(void*)"
      env =

      {attached = false, jniEnv = 0x0}

      #27 0x4012f24c in __thread_entry () from /data/extra/sources/build-flow-Android_for_armeabi_v7a_GCC_4_8_Qt_5_3_2_Qt_5_3_2_qt5_android_5_3-Debug/libc.so
      No symbol table info available.
      #28 0x4012f3e4 in pthread_create () from /data/extra/sources/build-flow-Android_for_armeabi_v7a_GCC_4_8_Qt_5_3_2_Qt_5_3_2_qt5_android_5_3-Debug/libc.so
      No symbol table info available.
      #29 0x00000000 in ?? ()
      No symbol table info available.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            iamsergio Sergio Martins
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes